# boomai_hackathon

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  REAL_VITAL_SIGNS.md  ecg-monitor.service  install-service.sh  run_ecg_monitor.sh  test-desktop.sh
docs/: VISUAL_FEATURES.md  raspberry-pi-setup.md
src/: ecg_display.rs  edf_parser.rs  main.rs  qrs_parser.rs
