[package]
name = "ecg3"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
tokio = { version = "1.0", features = ["full"] }
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Raspberry Pi specific optimizations
